# Define CMake parameter
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT (MTLib)
SET (MTLib_VERSION_MAJOR 0)
SET (MTLib_VERSION_MINOR 2)

# Include source folder
ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(example)

# Include document folder
ADD_SUBDIRECTORY(doc)

# SRC LIST and ADD EXECUTABLE
SET(SRC_LIST main.cpp)
ADD_EXECUTABLE(MTLib)
